--- a/tests/functional/cfngin/hooks/test_awslambda/sample_app/src/docker_xmlsec/pyproject.toml
+++ b/tests/functional/cfngin/hooks/test_awslambda/sample_app/src/docker_xmlsec/pyproject.toml
@@ -2,7 +2,7 @@
 name = "test-awslambda-xmlsec"
 version = "0.0.0"
 authors = [
-  "Onica Group LLC <opensource@onica.com>",
+  "Rackspace Technology, Inc. <opensource@rackspace.com>",
 ]
 description = "Test for awslambda hook."
 license = "Apache-2.0"
