update repository URLs to reflect transfer of repository ownership (#2483)
* update repository URLs to reflect transfer of repository ownership

* license copyright company name update

* code of conduct updated for new email domain

* readme updates for repo transfer

* replacing references to Onica with Rackspace

* update gha urls to reflect new org

* update tests for repo name

* assertion fix for unit test

* update codecov project badge

---------

Co-authored-by: Michael Bordash <michael.bordash@rackspace.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "runway"
 version = "0.0.0"
 authors = [
-  "Onica Group LLC <opensource@onica.com>",
+  "Rackspace Technology, Inc. <opensource@rackspace.com>",
 ]
 classifiers = [
   "Intended Audience :: Developers",
@@ -17,7 +17,7 @@ classifiers = [
 ]
 description = "Simplify infrastructure/app testing/deployment"
 documentation = "https://runway.readthedocs.io"
-homepage = "https://github.com/onicagroup/runway"
+homepage = "https://github.com/rackspace/runway"
 keywords = ["cli"]
 license = "Apache-2.0"
 maintainers = [
@@ -28,7 +28,7 @@ packages = [
   {include = "runway"},
 ]
 readme = "README.md"
-repository = "https://github.com/onicagroup/runway"
+repository = "https://github.com/rackspace/runway"
 
 [tool.poetry.dependencies]
 python = ">=3.9, <3.13"
@@ -122,7 +122,7 @@ version = "^1.34.158"
 runway = "runway._cli.main:cli"
 
 [tool.poetry.urls]
-"Bug Tracker" = "https://github.com/onicagroup/runway/issues"
+"Bug Tracker" = "https://github.com/rackspace/runway/issues"
 
 [tool.black]
 force-exclude = '''
