--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -15,6 +15,7 @@
     "ignorePaths": [
         "**/infrastructure/public/common/**",
         "**/node_modules/**",
+        "**/quickstarts/**/pyproject.toml",
         "**/runway/cfngin/hooks/staticsite/auth_at_edge/templates/**",
         "**/runway/templates/**",
         "**/tests/**"
@@ -32,7 +33,8 @@
                 "docs",
                 "lint",
                 "linters",
-                "test"
+                "test",
+                "types"
             ],
             "prPriority": -1
         },
@@ -49,6 +51,26 @@
                 "cspell",
                 "@cspell/{/,}**",
                 "cspell-{/,}**"
+            ]
+        },
+        {
+            "description": "group all `boto3` related packages together",
+            "groupName": "boto3",
+            "matchCategories": [
+                "python"
+            ],
+            "matchPackageNames": [
+                "boto3*",
+                "botocore*",
+                "mypy_boto*",
+                "mypy-boto*",
+                "s3transfer",
+                "types-boto*",
+                "types-s3transfer"
+            ],
+            "schedule": [
+                "after 12am on monday",
+                "before 6am on monday"
             ]
         },
         {
@@ -147,5 +169,6 @@
     "platformAutomerge": true,
     "semanticCommits": "disabled",
     "separateMinorPatch": false,
-    "separateMultipleMajor": true
+    "separateMultipleMajor": true,
+    "stopUpdatingLabel": "status:blocked"
 }
