add a log statement to aid in diagnosing failing functional test

--- a/tests/functional/cfngin/hooks/test_awslambda/sample_app/src/docker_mysql/Pipfile
+++ b/tests/functional/cfngin/hooks/test_awslambda/sample_app/src/docker_mysql/Pipfile
@@ -4,6 +4,6 @@
 mysqlclient = "==2.1.1"
 
 [[source]]
-name = "pypi"
+name = "pip_conf_index_global"
 url = "https://pypi.org/simple"
-verify_ssl = true
+verify_ssl = false
