recommend `detachhead.basedpyright` instead of `pylance`

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,10 +2,10 @@
     "recommendations": [
         "DavidAnson.vscode-markdownlint",
         "charliermarsh.ruff",
+        "detachhead.basedpyright",
         "editorconfig.editorconfig",
         "lextudio.restructuredtext",
         "ms-python.python",
-        "ms-python.vscode-pylance",
         "redhat.vscode-yaml",
         "streetsidesoftware.code-spell-checker",
         "tamasfe.even-better-toml"
