--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,6 +45,7 @@ jobs:
             functional-tests:
               - 'tests/conftest.py'
               - 'tests/functional/**'
+              - Makefile
             infrastructure-test:
               - 'infrastructure/blueprints/admin_user.py'
               - 'infrastructure/blueprints/cfngin_bucket.py'
