test commenting out `forcerm` from docker build
the docker's legacy builder supports this option but buildx does not

also output info from run for the version of docker being used and what builder is used

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -182,6 +182,8 @@ jobs:
         run: |
           sudo apt update -y
           sudo apt install -y default-libmysqlclient-dev libxml2-dev libxmlsec1-dev libxmlsec1-openssl pkg-config
+          docker --version
+          docker builder ls
       - name: 🏗 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
