resolve functional test errors (#2790)

--- a/tests/functional/cfngin/hooks/test_awslambda/sample_app/src/docker_mysql/Dockerfile
+++ b/tests/functional/cfngin/hooks/test_awslambda/sample_app/src/docker_mysql/Dockerfile
@@ -1,3 +1,4 @@
-FROM public.ecr.aws/sam/build-python3.10:latest
+# NOTE (@ITProKyle): temp patch, revert to `latest` after https://github.com/aws/aws-lambda-base-images/issues/245 is resolved
+FROM public.ecr.aws/sam/build-python3.10:1.121.0-20240730174607
 
 RUN yum install mysql-devel -y
