--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ readme = "README.md"
 repository = "https://github.com/rackspace/runway"
 
 [tool.poetry.dependencies]
-python = ">=3.9, <3.13"
+python = "^3.9"
 awacs = "*"
 boto3 = "^1.34.50"
 cfn-lint = "*"
